Fix proposal deadline.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 O grupo de usuários de Software Livre TchêLinux, em parceria com a FTEC Caxias do Sul, tem o prazer de convidar a comunidade, independente do nível de conhecimento e experiência com tecnologia, software livre e áreas afins, para participar do Seminário de Tecnologia em Software Livre TchêLinux.
             </p>
             <p>
-                O evento ocorrerá no dia 12 de Setembro na FTEC de Caxias do Sul.
+                O evento ocorrerá no dia 12 de Setembro, a partir das 8:30h, na FTEC de Caxias do Sul.
             </p>
             </div>
         </section>
@@ -101,7 +101,7 @@
         <div class="container">
           <h2 class="subtitle">Palestras</h2>
           <p>
-            Você pode <a href="https://goo.gl/xK9rmn" target="_blank">enviar sua palestra</a> até o dia 22 de Agosto.
+            Você pode <a href="https://goo.gl/xK9rmn" target="_blank">enviar sua palestra</a> até o dia 12 de Agosto.
           </p>
         </div>
         </section>
@@ -109,6 +109,20 @@
         <div class="container">
           <h2 class="subtitle">Local</h2>
           <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3483.682705366813!2d-51.218478999999995!3d-29.174021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ea2ffd3b94dbf%3A0x3398f5530c56890c!2sFtec+Faculdades!5e0!3m2!1spt-BR!2s!4v1406386338228" width="100%" height="450"></iframe>-->
+          <p>
+          Esse ano o TchêLinux traz algumas novidades, a começar pelo ambiente.
+          </p>
+          <p>
+          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da Ftec Caxias do Sul, localizado ao lado do prédio principal da FTEC.
+          </p>
+          <div id="imagens">
+              <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/1401190_920699691328289_3233921780860087318_o.jpg"/>
+              <img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xft1/t31.0-8/11411685_920699681328290_8444271572053353970_o.jpg"/>
+              <br/>
+              <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/11045488_920699487994976_1640738192957074763_o.jpg"/>
+              <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/11536412_920699504661641_3807007452773663703_o.jpg"/>
+          </div>
+          <br/>
           <p>
             FTEC - Caxias do Sul
           </p>
@@ -119,17 +133,6 @@
           <div id="map_canvas" style="width: 100%; height: 350px;"></div>
           <input type="text" id="search-route" class="form-control" placeholder="Digite sua localização">
           <div id="directions-panel"></div>
-          <br/>
-            <p>
-            Este ano o evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da Ftec Caxias do Sul.
-            </p>
-            <div id="imagens">
-                <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/1401190_920699691328289_3233921780860087318_o.jpg"/>
-                <img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xft1/t31.0-8/11411685_920699681328290_8444271572053353970_o.jpg"/>
-                <br/>
-                <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/11045488_920699487994976_1640738192957074763_o.jpg"/>
-                <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/11536412_920699504661641_3807007452773663703_o.jpg"/>
-            </div>
         </div>
         </section>
         <section id="apoio">
