Fix ftec capitalize.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           Esse ano o TchêLinux traz algumas novidades, a começar pelo ambiente.
           </p>
           <p>
-          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da Ftec Caxias do Sul, localizado ao lado do prédio principal da FTEC.
+          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da FTEC Caxias do Sul, localizado ao lado do prédio principal.
           </p>
           <div id="imagens">
               <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/1401190_920699691328289_3233921780860087318_o.jpg"/>
