--- a/index.html
+++ b/index.html
@@ -145,6 +145,24 @@
                       <img src="images/ftec.png" alt="FTEC" class="photo"/>
                     </a>
                   </li>
+                  <li class="apoio-item">
+                    <a href="http://www.trinopolo.com.br/" title="Trino Polo" class="apoio-logo apoio-link" target="_blank">
+                      <img src="images/trinopolo.jpg" alt="Trino Polo" class="photo"/>
+                    </a>
+                  </li>
+                </ul>
+                <h4>Patrocínio</h4>
+                <ul class="apoio-item">
+                    <li class="apoio-item">
+                      <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/flexxo.jpg" alt="Flexxo" class="photo"/>
+                      </a>
+                    </li>
+                    <li class="apoio-item">
+                      <a href="http://gruppen.com.br/" title="Gruppen" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/gruppen.jpg" alt="Gruppen" class="photo"/>
+                      </a>
+                    </li>
                 </ul>
             </div>
         </section>
