--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                 <h4>Patrocínio</h4>
                 <ul class="apoio-item">
                     <li class="apoio-item">
+                      <a href="http://www.communitas.org.br/" title="Instituto Communitas" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/communitas.jpg" alt="Instituto Communitas" class="photo"/>
+                      </a>
+                    </li>
+                    <li class="apoio-item">
                       <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
                         <img src="images/flexxo.jpg" alt="Flexxo" class="photo"/>
                       </a>
@@ -161,6 +166,16 @@
                     <li class="apoio-item">
                       <a href="http://gruppen.com.br/" title="Gruppen" class="apoio-logo apoio-link" target="_blank">
                         <img src="images/gruppen.jpg" alt="Gruppen" class="photo"/>
+                      </a>
+                    </li>
+                    <li class="apoio-item">
+                      <a href="http://www.hadi.com.br" title="HaDiCom" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/hadi.jpg" alt="HaDiCom" class="photo"/>
+                      </a>
+                    </li>
+                    <li class="apoio-item">
+                      <a href="http://www.integrasul.com.br/" title="Integrasul" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/integrasul.jpg" alt="Integrasul" class="photo"/>
                       </a>
                     </li>
                 </ul>
