Removido link do form de envio de palestras.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
         </section>
         <section id="palestras">
         <div class="container">
-          <h2 class="subtitle">Palestras</h2>
-          <p>
-            Você pode <a href="https://goo.gl/xK9rmn" target="_blank">enviar sua palestra</a> até o dia 12 de Agosto.
-          </p>
+            <h2 class="subtitle">
+                Palestras
+            </h2>
+                <p>
+                    Em breve as palestras selecionadas estarão disponíveis na programação
+                </p>
         </div>
         </section>
         <section id="local">
