--- a/index.html
+++ b/index.html
@@ -264,16 +264,152 @@
             </div>
           </div>
         </section>
+
         <section id="palestras">
-        <div class="container">
-            <h2 class="subtitle">
-                Palestras
-            </h2>
-                <p>
-                    Em breve as palestras selecionadas estarão disponíveis na programação
-                </p>
-        </div>
+            <div class="container">
+                <h2 class="subtitle">Palestras</h2>
+                <div id="speech-1" class=speech-container>
+                    <span class="speech-time">09h00</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            CSS com Estilo
+                        </h3>
+                        <span class="speech-description">
+                            CSS é um padrão para estilização de páginas Web com limitações que tornam seu desenvolvimento uma tarefa árdua, repetitiva e de difícil manutenção.Pré-processadores, como Sass e LESS, adicionam condicionais (if/else), variáveis, loops, operações matemáticas, regras aninhadas, mixins e importações inline, que aproximam o CSS à uma linguagem de programação. Assim, o código fica mais legível e melhor estruturado. Pretende-se apresentar alguns conceitos de pré-processadores de CSS exemplificando-os com Sass.
+                        </span>
+                        <h3 class="speaker-name">Eliane Maciel e Matheus Pereira</h3>
+                        <span class="speaker-bio">
+                            Eliane Faveron Maciel:
+                                Desenvolvedora Front-end no Instituto Communitas, estudante Ciência da Computação na Universidade de Caxias do Sul.
+                            </br>
+                            Matheus Pereira:
+                                Desenvolvedor de software no Instituto Communitas, Mestrando em Inteligência Artificial na UFRGS, bacharel em Ciência da Computação pela UCS.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-2" class=speech-container>
+                    <span class="speech-time">09h00</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Startup e a força do Linux
+                        </h3>
+                        <span class="speech-description">
+                            Cuidados simples que uma startup de base tecnológica pode ter, a fim de potencializar a força do Linux no contexto do negócio para obter resultados positivos!                                                        
+                        </span>
+                        <h3 class="speaker-name">Pandolfo</h3>
+                        <span class="speaker-bio">
+                            Vivencio de que forma a economia esta se transformando com as tecnologias inovadores e como as empresas podem tirar melhor proveito das oportunidades para prosperarem de forma ágil.Sou Especialista em impulsionar - estrategicamente - empresas inovadoras com apoio das Redes de Negócio e da tecnologia.Minha formação inclui Pós Graduação em Governança e Estratégia de TI, Pós Graduação em Marketing e Comunicação, Especialização em Gestão Empresarial e Graduação em Administração de Empresas.Invisto e presto mentoria em Startups e atuo como Membro de Conselhos Administrativos e Consultivos em diversas empresas inovadoras.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-3" class=speech-container>
+                    <span class="speech-time">09h00</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Segurança Avançada no Apache
+                        </h3>
+                        <span class="speech-description">
+                            O objetivo da palestra não é mostrar técnicas bem conhecidas ou configurações básicas de segurança que as boas práticas recomendam. Mostrarei algumas técnicas de segurança mais complexas para deixar o servidor Apache HTTP Server mais seguro e protegido contra alguns ataques sofisticados. Bloqueios de ferramentas de Pentest automatizadas, regras inteligentes de bloqueios baseadas em comportamento e conteúdo dinâmico, etc. As técnicas serão mostradas com o maior nível de realidade possível. O conceito e a lógica das técnicas junto com a demonstração prática certamente deixarão os assuntos esclarecidos para que os administradores possam implementá-las em seus ambientes.
+                        </span>
+                        <h3 class="speaker-name">Marcus Burghardt</h3>
+                        <span class="speaker-bio">
+                            Consultor Especialista em Segurança da Informação na MBSEC Segurança da Informação e instrutor de cursos voltados à Segurança da Informação. Especialista em Redes, Forense, PenTest, Firewalls, IDSs e outros segmentos da Segurança da Informação. Cerca de 13 anos de experiência em Redes, Servidores Linux e Servidores Windows. Principais certificações: RHCE, RHCX, RHCI, LPIC-2, Microsoft, Citrix, ITIL... Mestre Cervejeiro Caseiro nas poucas horas vagas. : )
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-4" class=speech-container>
+                    <span class="speech-time">09h40</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Desenvolvimento Web com Django!
+                        </h3>
+                        <span class="speech-description">
+                            O que é Django, quem usa Django, introdução ao modelo MVT e como fazer um site em django.
+                        </span>
+                        <h3 class="speaker-name">Lucas Vieira May</h3>
+                        <span class="speaker-bio">
+                            Python Developer na empresa HadiCom/Instituto Communitas.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-5" class=speech-container>
+                    <span class="speech-time">09h40</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Software Livre: Socialmente Justo, Tecnologicamente Viável e Economicamente Sustentável
+                        </h3>
+                        <span class="speech-description">
+                            Nesta palestra serão abordados aspectos referentes a história da criação do Movimento Software Livre, a importância do uso de Softwares Livres ao invés de softwares privativos, legislações referentes ao uso de Softwares Livres no RS e exemplos de algumas distribuições GNU/Linux.
+                        </span>
+                        <h3 class="speaker-name">Clayton Eduardo Dausacker</h3>
+                        <span class="speaker-bio">
+                            Técnico em Manutenção de Computadores, Ativista do Movimento Software Livre, Usuário GNU, Sócio da Associação Software Livre.Org, Membro Tchelinux - Grupo de Usuários de Software Livre do RS, Acadêmico do Curso de Serviço Social - ULBRA, Palestrante FLISOL 2014 (Feevale), Palestrante Fórum Tchelinux 2014 (FTEC), Palestrante Software Freedom Day 2014 (Feevale) e Palestrante FISL16 (PUC).
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-6" class=speech-container>
+                    <span class="speech-time">09h40</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Bacula - Getting Started
+                        </h3>
+                        <span class="speech-description">
+                            Gerenciamento do Bacula - O que é Bacula. Porque utilizar essa ferramenta e o que esperar dela. Interações entre os serviços. Conhecendo os arquivos de configurações. Entendendo Pools, Volumes e Filesets. Utilização Básica: Configurar um novo cliente, Rodar um backup e restore, Cancelar o backup, Verificar status e outras funções.
+                        </span>
+                        <h3 class="speaker-name">Andressa dos Santos Ferreira Natario</h3>
+                        <span class="speaker-bio">
+                            Analista de Suporte - MBSEC Segurança da Informação.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-7" class=speech-container>
+                    <span class="speech-time">10h20</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Primeiros passos com Splinter
+                        </h3>
+                        <span class="speech-description">
+                            Splinter é uma ferramenta para realizar testes de aceitação de aplicações web. Por onde começar? Realizando login no Django. Preenchendo um formulário e gravando-o. Realizando buscas no google. Browser based drivers e Headless drivers.
+                        </span>
+                        <h3 class="speaker-name">Adriano Margarin</h3>
+                        <span class="speaker-bio">
+                            Bacharelando em Sistemas de Informação na Universidade de Caxias do Sul. Membro assíduo do Diretório Acadêmico de mesmo curso. Desenvolvedor Python/Django a 3+ anos. Colaborador na empresa Pull4Up (pull4up.com.br) à 18 meses.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-8" class=speech-container>
+                    <span class="speech-time">10h20</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Plone show
+                        </h3>
+                        <span class="speech-description">
+                            Demostrar as principais funcionalidades do Plone (plone.org) na prática.
+                        </span>
+                        <h3 class="speaker-name">Luciano Camargo Cruz</h3>
+                        <span class="speaker-bio">
+                            Programador Python, WEB com Zope/Plone; Diretor técnico na empresa HaDiCom; pesquisador/desenvolvedor Instituto Communitas; Bacharel em Ciência da Computação pela Universidade de Caxias do Sul; Estudante MBA na IMED; ADORADOR de Python, Software Livre, Jack Daniel's, Games, Caça, Pesca, Motociclista...
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-9" class=speech-container>
+                    <span class="speech-time">10h20</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Precisamos Falar sobre Administração de Sistemas
+                        </h3>
+                        <span class="speech-description">
+                            O SysAdmin é o responsável pela configuração e manutenção dos servidores de uma rede. Ser sysadmin é fácil, você só precisa saber sobre: TCP, UDP, ICMP, Storage, Virtualização, Monitoramento, Backup, VPN, Linux, Windows(sim, também), Servidor Web, Proxy, DNS, DHCP, Firewall, Banco de Dados, Java, AD, LDAP, RAID, SSH, Vim, Compartilhamento de Arquivos, Compilação de Kernel, Roteamento, Gerenciamento de Pacotes, Systemd, Impressoras, E-mail, Criptografia, Containers, SELinux, Gerenciamento de Tempo, Psicologia, Xkcd e Breaking Bad, entre outros. Essa apresentação tem o objetivo de orientar Sysadmins(e também desenvolvedores) a gerenciar melhor suas funções, apresentar ideias, ferramentas e referências que possam trazer soluções para o cotidiano.
+                        </span>
+                        <h3 class="speaker-name">Carlos Alberto Parisotto</h3>
+                        <span class="speaker-bio">
+                            Certificado LPIC-2, tecnólogo em Redes de Computadores pela FTEC, trabalha desde 2008 com Linux. Analista de suporte na MBSEC Segurança da Informação. Palestrante em seis eventos Tchelinux Caxias do Sul e Porto Alegre.
+                        </span>
+                    </div>
+                </div>
+            </div>
         </section>
+
         <section id="local">
         <div class="container">
           <h2 class="subtitle">Local</h2>
