--- a/index.html
+++ b/index.html
@@ -407,6 +407,124 @@
                         </span>
                     </div>
                 </div>
+                <div id="speech-10" class=speech-container>
+                    <span class="speech-time">11h30</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Apigilty com Ionic - Impulsione sua Startup!
+                        </h3>
+                        <span class="speech-description">
+                            De forma prática irei demonstrar como integrar estas duas tecnologias, para incentivar desenvolvedores a seguirem boas práticas de desenvolvimento de aplicativos mobile sem a necessidade de uma carga de conhecimento muito elevado.
+                            Logo, irei criar um mini aplicativo que consuma a API que montaremos na própria palestra.
+                            Demonstrarei recursos importantes do apigility e do Ionic.
+                            Logicamente, irei apontar livros e documentação para as pessoas que quiserem se aprofundar pois de fato essa a ponta do Iceberg.
+                            Fomentando o conhecimento acredito que isso possa incentivar e aguaçar conceitos e conhecimentos.
+                            Sabemos que a grande comunidade tem medo de ZF2 por tratar ele com uma curva de aprendizado muito alta. Irei colocar que isso não é verdade. Acredite!
+                            <br/>https://apigility.org/
+                            <br/>http://ionicframework.com/
+                        </span>
+                        <h3 class="speaker-name">Sérgio Ernane Munhós Hermes</h3>
+                        <span class="speaker-bio">
+                            Desenvolvedor de Sistemas da Informação na FTEC Faculdades.
+                            Estudo e trabalho com PHP a mais de 8 anos.
+                            Estudo e trabalho com Zend Framework 1 e 2.<br/>
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-11" class=speech-container>
+                    <span class="speech-time">11h30</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Software Livre em Operadoras de Telecomunicações
+                        </h3>
+                        <span class="speech-description">
+                            * Softwares livres que pode ser utilizados por operadoras;<br/>
+                            * Centrais Telefônicas de código aberto;<br/>
+                            * Roteamento de chamadas entre as centrais telefônicas;<br/>
+                            * Comutadores de Voz de código aberto;<br/>
+                            * Roteamento entre os comutadores voz e entre operadoras para tráfego nacional e internacional;<br/>
+                            * Estrutura dos bancos de dados de código aberto;<br/>
+                            * Integração entre os bancos de dados, sistemas, centrais telefônicas e comutadores de voz;<br/>
+                            * Estrutura de software livre que garante o up time elevado dos serviços;<br/>
+                            * Segurança de todo ambiente OpenSource.
+                        </span>
+                        <h3 class="speaker-name">Ronaldo Rathis Sacco</h3>
+                        <span class="speaker-bio">
+                            Gerente de Telecom, sócio proprietário da empresa Saperx; Graduado em Ciência da Computação; Pós Graduado em Segurança da Informação.
+                        </span>
+                    </div>
+                </div>
+                <div id="speech-12" class=speech-container>
+                    <span class="speech-time">11h30</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                        Além do HTTPS - Como (tentar) Aumentar a Segurança de seu Website e Aplicação Web
+                        </h3>
+                        <span class="speech-description">
+                            Segurança em websites é uma tarefa difícil. Apenas uma brecha em um erro de desenvolvimento ou uma configuração esquecida e mal feita e seu portal pode ser comprometido. Não basta mais somente implementar alguns controles ou ter alguns cuidados na hora da implementação de uma aplicação que será exposta para web. Essa palestra irá abordar como (tentar) aumentar a segurança se seu website através da implementação de alguns controles pró-ativos como: hardening TLS, HSTS, certificate and  public key pinning, HTTP headers, XSS protections, Cookies protections,  Content Security Policy, Hardening Web Server, OWASP Proactive Controls  Project.
+                        </span>
+                        <h3 class="speaker-name">Jeronimo Zucco</h3>
+                        <span class="speaker-bio">
+                            Bacharel em Ciência da Computação pela Universidade de Caxias do Sul e Pós-Graduado em Gerência e Segurança de Redes de Computadores também pela UCS. Certificado CISSP (Certified Information Systems Secure Profissional), membro do projeto OWASP (Open Web Application Security Project) desde 2010. Já palestrou em diversos eventos sobre o tema segurança de sistemas: You Shot The Sheriff, FISL, Tchelinux, Python Brasil, ABIN, PoaSec, GTS e OWASP.
+                        </span>
+                    </div>
+                </div>
+
+
+
+
+                <div id="speech-13" class=speech-container>
+                    <span class="speech-time">12h10</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Por que Ruby on Rails?
+                        </h3>
+                        <span class="speech-description">
+                            Conheça a stack e entenda todas as vantagens de trabalhar em um ambiente mantido por uma comunidade extremamente ativa e como isso influência na sua produtividade.
+                        </span>
+                        <h3 class="speaker-name">Marcelo Boeira</h3>
+                        <span class="speaker-bio">
+                            Engenheiro Eletrônico pela Unisinos, trabalhando com desenvolvimento de software há 5 anos, últimos 2 com Ruby. Atualmente trabalha na Globo.com com encoding de vídeo. Apaixonado por desenvolvimento de software, eletrônica e sistemas embarcados.
+                        </span>
+                    </div>
+                </div>
+
+                <div id="speech-14" class=speech-container>
+                    <span class="speech-time">12h10</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Inteligência Artificial - Da Curiosidade à Academia
+                        </h3>
+                        <span class="speech-description">
+                            Você tem curiosidade sobre o que é IA? Quer seguir o resto da vida trabalhando com isso? Então essa palestra é para você. Nessa palestra irei falar como e onde começar a estudar e trabalhar com IA e um pouco sobre minha caminhada nesta área da curiosidade até a academia. Introdução à inteligência artificial passando pelas áreas de conhecimento que compreendem a IA, e em que é o foco de cada uma, focando no final em agentes inteligentes baseados na arquitetura BDI.
+                        </span>
+                        <h3 class="speaker-name">Alan Velasques Santos</h3>
+                        <span class="speaker-bio">
+                            Mestrando em Inteligência Artificial pela UFRGS, possui graduação em Ciência da Computação pela UNIFRA (2013). Desenvolvedor PHP há mais de 5 anos, a dois utilizando o framework CodeIgniter. Desenvolvedor mobile iOS com experiência, aplicativos e vários cursos na área. Experiência em Front-End com JQuery, CSS e HTML visando também layouts responsivos e mobile. Atualmente bolsista de mestrado e diretor do laboratório de Inteligência Artificial da UFRGS.
+                        </span>
+                    </div>
+                </div>
+
+                <div id="speech-15" class=speech-container>
+                    <span class="speech-time">12h10</span>
+                    <div class="speech-info">
+                        <h3 class="speech-title">
+                            Open Hybrid Cloud
+                        </h3>
+                        <span class="speech-description">
+                            Com a virtualização sendo o padrão atual nos Data Centers e o crescimento da disponibilidade das tecnologias de Cloud Computing, as empresas procuram formas de integrar esses ambientes reduzindo a carga de trabalho e o tempo necessário para entrega de aplicações em qualquer ambiente, seja físico, virtualizado, cloud privada ou cloud pública. Essa apresentação tem o objetivo de mostrar as principais soluções em Software Livre que compõem a "Open Hybrid Cloud". Falaremos sobre KVM, oVirt, OpenStack e ManageIQ, além de tecnologias complementares.
+                        </span>
+                        <h3 class="speaker-name">Amador Pahim</h3>
+                        <span class="speaker-bio">
+                            Embaixador do Projeto Fedora. Colaborador da Comunidade oVirt. Senior Software Maintenance Engineer no Time de Virtualziação da Red Hat.
+                        </span>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
         </section>
 
