--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                             <td class="schedule-slot">
                                 <a href=#speech-5>
                                     <span class="description">
-                                        Software Livre: Socialmente Justo, Tecnologicamente Viável e Economicamente Sustentável
+                                    -
                                     </span>
-                                    <span class="speaker">Clayton Eduardo Dausacker</span>
+                                    <span class="speaker"></span>
                                 </a>
                             </td>
                             <td class="schedule-slot">
@@ -239,9 +239,9 @@
                             <td class="schedule-slot">
                                 <a href=#speech-14>
                                     <span class="description">
-                                        Inteligência Artificial - Da Curiosidade à Academia
+                                        Introdução ao Python e como aprender a programar sozinho com ferramentas gratuitas
                                     </span>
-                                    <span class="speaker">Alan Velasques Santos</span>
+                                    <span class="speaker">Eduardo Silveira</span>
                                 </a>
                             </td>
                             <td class="schedule-slot">
@@ -332,21 +332,20 @@
                         </span>
                     </div>
                 </div>
+                <!--
                 <div id="speech-5" class=speech-container>
                     <span class="speech-time">09h40</span>
                     <div class="speech-info">
                         <h3 class="speech-title">
-                            Software Livre: Socialmente Justo, Tecnologicamente Viável e Economicamente Sustentável
                         </h3>
                         <span class="speech-description">
-                            Nesta palestra serão abordados aspectos referentes a história da criação do Movimento Software Livre, a importância do uso de Softwares Livres ao invés de softwares privativos, legislações referentes ao uso de Softwares Livres no RS e exemplos de algumas distribuições GNU/Linux.
                         </span>
-                        <h3 class="speaker-name">Clayton Eduardo Dausacker</h3>
+                        <h3 class="speaker-name"></h3>
                         <span class="speaker-bio">
-                            Técnico em Manutenção de Computadores, Ativista do Movimento Software Livre, Usuário GNU, Sócio da Associação Software Livre.Org, Membro Tchelinux - Grupo de Usuários de Software Livre do RS, Acadêmico do Curso de Serviço Social - ULBRA, Palestrante FLISOL 2014 (Feevale), Palestrante Fórum Tchelinux 2014 (FTEC), Palestrante Software Freedom Day 2014 (Feevale) e Palestrante FISL16 (PUC).
                         </span>
                     </div>
                 </div>
+                -->
                 <div id="speech-6" class=speech-container>
                     <span class="speech-time">09h40</span>
                     <div class="speech-info">
@@ -493,14 +492,13 @@
                     <span class="speech-time">12h10</span>
                     <div class="speech-info">
                         <h3 class="speech-title">
-                            Inteligência Artificial - Da Curiosidade à Academia
+                            Introdução ao Python e como aprender a programar sozinho com ferramentas gratuitas
                         </h3>
                         <span class="speech-description">
-                            Você tem curiosidade sobre o que é IA? Quer seguir o resto da vida trabalhando com isso? Então essa palestra é para você. Nessa palestra irei falar como e onde começar a estudar e trabalhar com IA e um pouco sobre minha caminhada nesta área da curiosidade até a academia. Introdução à inteligência artificial passando pelas áreas de conhecimento que compreendem a IA, e em que é o foco de cada uma, focando no final em agentes inteligentes baseados na arquitetura BDI.
+                            Python é uma linguagem de programação de alto nível "livre" que suporta diversos paradigmas, como o orientado a objetos, imperativo, funcional e procedural. A palestra tem como objetivo relatar a experiência do aprendizado de um nova linguagem (como o Python) através de ferramentas gratuitas e introduzir o participante na linguagem estudada, além de citar ferramentas gratuitas disponíveis no mercado para auxiliar o aprendizado de novas linguagens de programação.
                         </span>
-                        <h3 class="speaker-name">Alan Velasques Santos</h3>
+                        <h3 class="speaker-name">Eduardo Silveira</h3>
                         <span class="speaker-bio">
-                            Mestrando em Inteligência Artificial pela UFRGS, possui graduação em Ciência da Computação pela UNIFRA (2013). Desenvolvedor PHP há mais de 5 anos, a dois utilizando o framework CodeIgniter. Desenvolvedor mobile iOS com experiência, aplicativos e vários cursos na área. Experiência em Front-End com JQuery, CSS e HTML visando também layouts responsivos e mobile. Atualmente bolsista de mestrado e diretor do laboratório de Inteligência Artificial da UFRGS.
                         </span>
                     </div>
                 </div>
