--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <li><a href="#inscricao">Inscrições</a></li>
                         <li><a href="#programacao">Programação</a></li>
                         <li><a href="#palestras">Palestras</a></li>
+                        <li><a href="#certificados">Certificados</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
                       </ul>
@@ -519,11 +520,16 @@
                     </div>
                 </div>
 
-
-
-
-
             </div>
+        </section>
+
+        <section id="certificados">
+          <div class="container">
+            <h2 class="subtitle">Certificados</h2>
+            <p>
+                <a target="_blank" href="#">Certificados para download!</a>
+            </p>
+          </div>
         </section>
 
         <section id="local">
@@ -610,6 +616,7 @@
                         <li class="active"><a href="#">TchêLinux</a></li>
                         <li><a href="#programacao">Programação</a></li>
                         <li><a href="#palestras">Palestras</a></li>
+                        <li><a href="#certificados">Certificados</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
                     </ul>
