--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
           <div class="container">
             <h2 class="subtitle">Certificados</h2>
             <p>
-                <a target="_blank" href="#">Certificados para download!</a>
+                <a target="_blank" href="https://github.com/TcheLinux/caxias/tree/master/certificados">Certificados para download!</a>
             </p>
           </div>
         </section>
