Add link apresentações.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                                     </span>
                                     <span class="speaker">Eliane Maciel e Matheus Pereira</span>
                                 </a>
+                                <a class="presentation" href="http://matheper.github.io/css_estilo">Visualizar apresentação</a>
                             </td>
                             <td class="schedule-slot">
                                 <a href=#speech-2>
@@ -147,6 +148,7 @@
                                     </span>
                                     <span class="speaker">Lucas Vieira May</span>
                                 </a>
+                                <a class="presentation" href="http://pt.slideshare.net/lucasvieiramay/desenvolvimento-web-com-django">Visualizar apresentação</a>
                             </td>
                             <td class="schedule-slot">
                                 <a href=#speech-5>
@@ -175,6 +177,7 @@
                                     </span>
                                     <span class="speaker">Adriano Margarin</span>
                                 </a>
+                                <a class="presentation" href="http://pt.slideshare.net/adrianomargarin/primeiros-passo-com-splinter-52204833">Visualizar apresentação</a>
                             </td>
                             <td class="schedule-slot">
                                 <a href=#speech-8>
@@ -191,6 +194,7 @@
                                     </span>
                                     <span class="speaker">Carlos Alberto Parisotto</span>
                                 </a>
+                                <a class="presentation" href="https://github.com/caparisotto/tchelinuxcx2015">Visualizar apresentação</a>
                             </td>
                         </tr>
 
@@ -224,6 +228,7 @@
                                     </span>
                                     <span class="speaker">Jeronimo Zucco</span>
                                 </a>
+                                <a class="presentation" href="http://pt.slideshare.net/jczucco/alm-do-https">Visualizar apresentação</a>
                             </td>
                         </tr>
 
@@ -244,6 +249,7 @@
                                     </span>
                                     <span class="speaker">Eduardo Silveira</span>
                                 </a>
+                                <a class="presentation" href="https://prezi.com/gos_ap_oz0vz/introducao-ao-python-e-como-aprender-a-programar-sozinho-com/">Visualizar apresentação</a>
                             </td>
                             <td class="schedule-slot">
                                 <a href=#speech-15>
