Add versões anteriores.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <li><a href="#certificados">Certificados</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
+                        <li><a href="#edicoes">Edições</a></li>
                       </ul>
                     </div><!-- /.navbar-collapse -->
 
@@ -532,9 +533,9 @@
         <section id="certificados">
           <div class="container">
             <h2 class="subtitle">Certificados</h2>
-            <p>
+            <div class="individual-link">
                 <a target="_blank" href="https://github.com/TcheLinux/certificadoscaxias/tree/master/2015">Certificados para download!</a>
-            </p>
+            </div>
           </div>
         </section>
 
@@ -614,6 +615,15 @@
                 </ul>
             </div>
         </section>
+        <section id="edicoes">
+          <div class="container">
+            <h2 class="subtitle">Edições anteriores</h2>
+            <div class="individual-link">
+                <a href="2014/index.html">TchêLinux 2014</a>
+            </div>
+          </div>
+        </section>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -625,6 +635,7 @@
                         <li><a href="#certificados">Certificados</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
+                        <li><a href="#edicoes">Edições</a></li>
                     </ul>
                 </div>
             </div>
